# roopositron

./: .dep.inc  .gitignore  CMakeLists.txt  ChannelConvolutionPdf.cpp  Constants.cpp  Constants.h  ExpPdf.cpp  ExpPdf.h  FileUtils.cpp  FileUtils.h  GrainPdf.cpp  GrainPdf.h  Makefile  MyConvPdf.cpp  MyConvPdf.h  MyPdf.cpp  MyPdf.h  MyPdfCache.cpp  ParamStorage.cpp  ParamStorage.h  PsThermPdf.h  README.md  RootUtil.cpp  Spectrum_000.Spe  StructParams.h  ThreeExpPdf.h  ThreeGaussian.cpp  ThreeGaussian.h  TrapPdf.cpp  TrapPdf.h  TwoExpPdf.cpp  TwoExpPdf.h  TwoGaussian.cpp  TwoGaussian.h  constants.txt  data-1exp-2gauss-1.txt  data-1exp-2gauss-2.txt  data-1exp-2gauss-3.txt  data-1exp-2gauss-4.txt  data-1exp-2gauss-5.txt  (+4 more)
nbproject/: Makefile-Debug.mk  Makefile-Debug_OS_X.mk  Makefile-Debug_Win.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Debug_OS_X.bash  Package-Debug_Win.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
nbproject/private/: Makefile-variables.mk  configurations.xml  private.xml
src/: LinkDef.h  main.cpp  positronfit.cpp
src/model/: Constants.cpp  Constants.h  ParamStorage.cpp  ParamStorage.h  ParametersPool.cpp  ParametersPool.h  RootConstants.cpp  RootConstants.h
src/roofit/: AdditiveConvolutionPdf.cpp  AdditiveConvolutionPdf.h  CommonParameters.cpp  CommonParameters.h  ModelCommonizer.cpp  ModelCommonizer.h  PdfFactory.cpp  PdfFactory.h  PdfServer.cpp  PdfServer.h  PsThermPdf.cpp  ReverseAddPdf.cpp  ReverseAddPdf.h  ThreeGaussian.h
src/roofit/myrooabspdf/: HasIndirectParameters.cpp  HasIndirectParameters.h  MyRooAbsPdf.cpp  MyRooAbsPdf.h
src/roofit/pdfs/: ConstantPdf.cpp  ConstantPdf.h  ExpPdf.cpp  ExpPdf.h  GrainPdf.cpp  GrainPdf.h  LiquidPdf.cpp  LiquidPdf.h  LiquidSimplePdf.cpp  LiquidSimplePdf.h  ParaPdf.cpp  ParaPdf.h  Powder2Pdf.cpp  Powder2Pdf.h  PowderPdf.cpp  PowderPdf.h  ThreeExpPdf.cpp  ThreeExpPdf.h  ThreeGaussian.cpp  ThreeGaussian.h  TrapPdf.cpp  TrapPdf.h  TwoExpPdf.cpp  TwoExpPdf.h  TwoGaussian.cpp  TwoGaussian.h
src/roofit/providers/: AbstractProvider.cpp  AbstractProvider.h  BackgroundProvider.cpp  BackgroundProvider.h  ExpPdfProvider.cpp  ExpPdfProvider.h  ExpProvider.cpp  ExpProvider.h  ExpSourceProvider.cpp  ExpSourceProvider.h  GrainProvider.cpp  GrainProvider.h  LiquidProvider.cpp  LiquidProvider.h  LiquidSimpleProvider.cpp  LiquidSimpleProvider.h  OneGaussProvider.cpp  OneGaussProvider.h  ParaProvider.cpp  ParaProvider.h  Powder2Provider.cpp  Powder2Provider.h  PowderProvider.cpp  PowderProvider.h  SourceProvider.cpp  SourceProvider.h  ThreeExpProvider.cpp  ThreeExpProvider.h  ThreeExpSourceProvider.cpp  ThreeExpSourceProvider.h  ThreeGaussProvider.cpp  ThreeGaussProvider.h  TrappingProvider.cpp  TrappingProvider.h  TwoExpProvider.cpp  TwoExpProvider.h  TwoExpSourceProvider.cpp  TwoExpSourceProvider.h  TwoGaussProvider.cpp  TwoGaussProvider.h
src/temp/: ChannelConvolutionPdf.cpp  ChannelConvolutionPdf.h  ConvPdf.cpp  ConvPdf.h  MyPdfCache.h  StructParams.cpp  ThreeExpPdfProvider.cpp  ThreeExpPdfProvider.h  TwoExpPdf.h  TwoExpPdfProvider.cpp  TwoExpPdfProvider.h
src/util/: Debug.h  FileUtils.cpp  FileUtils.h  GraphicsHelper.cpp  GraphicsHelper.h  HistProcessor.cpp  HistProcessor.h  MathUtil.cpp  MathUtil.h  ObjectNamer.cpp  ObjectNamer.h  RootHelper.cpp  RootHelper.h  RootUtil.h  RootUtils.cpp  RootUtils.h  StringUtils.cpp  StringUtils.h
temp-spectra/: 18_07_18_Si_2.49kV_CF1_32'150_25cm_2m_3.5kHz__CF2_18'20_24cm_5m_13kHz_MCA_13cps_sum.Spe  19_03_02_iProp_noBlowing.Spe  19_03_04_iP_Ar_2.7kV_2m_CF4=20'28_16cm_5mV_40kHz__2.3kV_3m_CF3=38'64_15cm__5mV_50kHz_MCA_274cps.Spe  CC_sum.Spe  H20_001.Spe  LCO-A.Spe  Si_2.Spe  Spectrum_000.Spe
test-spectra/: 18_07_20_Al_2.49kV_CF1_32'150_25cm_2m_5kHz__CF2_18'20_24cm_5m_10kHz_MCA_14cps_sum.Spe  18_08_01_Al2O3_50nm_.Spe  18_08_01_Al2O3_50nm_sum.Spe  18_08_01_Al2O3_50nm_sum_maestro.Spe  18_08_02_Al2O3_50nm_100ns_sum.Spe  18_08_17_Al2O3_50nm_200ns_sum.Spe  19_01_23_Si_ITEP_0.00613_ns.txt  19_02_11_iOct_noBlowing.Spe  19_02_28_cH_Ar.Spe  19_03_03_iP_O2_2.7kV_2m_CF4=20'28_16cm_5mV_40kHz__2.3kV_3m_CF3=38'64_15cm__5mV_50kHz_MCA_274cps.Spe  Al2O3_50nm.GRF  CA_sum.Spe  CF_sum.Spe  H20_000.Spe  H2O_002.Spe  Spectrum_003.Spe  Spectrum_004.Spe  Zn-annealed.Spe  wder surface
test-spectra-liquid/: 19_03_23_H2O_Ar_2.7kV_2m_CF4=20'28_16cm_5mV_44kHz__2.3kV_3m_CF3=38'64_15cm__5mV_34kHz_MCA_180cps_05+17.Spe  constants.txt
test-spectra-liquid/liquid-2gauss/: data-liquid-2gauss-1.txt  fit-liquid-2gauss-1.root  parameters.txt
test-spectra-liquids/: constants.txt
test-spectra-liquids/3exp-2gauss/: data-3exp-2gauss-1.txt  fit-3exp-2gauss-1.root  parameters.txt
test-spectra-liquids/liquid-2gauss/: data-liquid-2gauss-1.txt  fit-liquid-2gauss-1.root  parameters.txt
wolfram/: Si_1.Spe  Si_3.Spe  Spectrum_001.Spe  Spectrum_002.Spe  appendix.nb  decay.nb  exp.nb  gauss.nb  gauss_sig.nb  grain-approx.nb  grain-cform.nb  grain-simplify-cform.nb  grain.nb  liquid-eq8.nb  liquid-eq9.nb  liquid-norm.nb  lop.nb  nPs-analyt.nb  nPs.nb  para-ch.nb  powder-approx.nb  powder-new.nb  powder-rev1.nb  powder-rev2-ch.nb  powder-rev2.nb  powder-rev3-ch.nb  powder-rev3.nb  powder-rev4-ch.nb  powder-rev5-ch.nb  powder-rev6-ch-fix.nb  powder-rev6-ch.nb  powder.nb  powder.xlsx  powder2-norm.nb  powder2.nb  trapping.nb  ~$powder.xlsx
